--- a/public/student/css/style.css
+++ b/public/student/css/style.css
@@ -13,6 +13,20 @@ header .navbar-nav .nav-item {
     margin-right: 20px;
 }
 
+.error{
+    background: #eb3434;
+    width: 100%;
+    text-align: center;
+    color: white;
+}
+
+.success{
+    background: #45E96B;
+    width: 100%;
+    text-align: center;
+    color: white;
+}
+
 header .navbar-nav .nav-item .nav-link {
     padding: 0;
     font-size: 16px;
