user seeder change

--- a/public/teacher/css/style.css
+++ b/public/teacher/css/style.css
@@ -18,7 +18,7 @@ header {
 }
 
 .success{
-    background: #eb3434;
+    background: #45E96B;
     width: 100%;
     text-align: center;
     color: white;
