--- a/public/teacher/css/style.css
+++ b/public/teacher/css/style.css
@@ -11,18 +11,10 @@ header {
 
 
 .error{
-    background: #eb3434;
-    width: 100%;
-    text-align: center;
-    color: white;
+    color:  #eb3434;
 }
 
-.success{
-    background: #45E96B;
-    width: 100%;
-    text-align: center;
-    color: white;
-}
+
 
 header .notification {
     height: 20px;
@@ -235,7 +227,7 @@ main .innerMenu ~ .content{
 
 .class-blocks .card .thumbBlock {
     background: var(--bg-lightgrey);
-    height: 100%;
+    /* height: 100%; */
     width: 150px;
     display: flex;
     align-items: center;
