2nd milestone work complete

--- a/public/student/css/style.css
+++ b/public/student/css/style.css
@@ -9,6 +9,11 @@ header {
     border-bottom: 1px solid var(--bg-darkgrey);
 }
 
+#carouselExampleControls{
+    background: black;
+}
+
+
 header .navbar-nav .nav-item {
     margin-right: 20px;
 }
