progres bar implemented

--- a/public/student/css/style.css
+++ b/public/student/css/style.css
@@ -975,7 +975,15 @@ footer .social-link li a:hover {
 }
 .side-content .filter-courses ul li{
     align-items: flex-start;
+    cursor: pointer;
+    padding: 13px;
 }
+
+.side-content .filter-courses ul li.active{
+  background: #f5f7f9;
+}
+
+
 .side-content .filter-courses ul li span{
    font-weight: var(--font-regular);
 }
